﻿Fixes JWT handling/updating. Prior implementation could cause a NullReferenceException if JWT refresh fails due to API not being reachable.