@@ -1,0 +1,48 @@
+﻿using RobinTTY.NordigenApiClient.JsonConverters;
+using System.ComponentModel;
+using System.Text.Json.Serialization;
+
+namespace RobinTTY.NordigenApiClient.Models.Responses;
+
+/// <summary>
+/// Identifies the status of the bank account.
+/// <para>Reference: <see href="https://nordigen.com/en/account_information_documenation/integration/statuses/#:~:text=is%20starting%20status.-,Accounts%20endpoint,-Status%20long"/></para>
+/// </summary>
+[JsonConverter(typeof(EnumDescriptionConverter<BankAccountStatus>))]
+public enum BankAccountStatus
+{
+    /// <summary>
+    /// An undefined bank account status. Assigned if the status couldn't be matched to any known option.
+    /// </summary>
+    Undefined,
+    /// <summary>
+    /// Indicates that the user has successfully authenticated and an account has been discovered.
+    /// </summary>
+    [Description("DISCOVERED")]
+    Discovered,
+    /// <summary>
+    /// Indicates that an error was encountered in processing the account.
+    /// </summary>
+    [Description("ERROR")]
+    Error,
+    /// <summary>
+    /// Indicates that the access to the account has expired as defined in the end user agreement.
+    /// </summary>
+    [Description("EXPIRED")]
+    Expired,
+    /// <summary>
+    /// Indicates that the account is being processed by the institution.
+    /// </summary>
+    [Description("PROCESSING")]
+    Processing,
+    /// <summary>
+    /// Indicates that the account has been successfully processed.
+    /// </summary>
+    [Description("READY")]
+    Ready,
+    /// <summary>
+    /// Indicates that the account has been suspended due to mre than 10 consecutive failed attempts to access the account.
+    /// </summary>
+    [Description("SUSPENDED")]
+    Suspended
+}
