@@ -14,7 +14,7 @@
     <PackageTags>Nordigen; API; client</PackageTags>
     <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes.txt"))</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>2.0.3</Version>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
